fix(code-tabs): Fix line height on safari

--- a/src/components/code-tabs/code-tabs.scss
+++ b/src/components/code-tabs/code-tabs.scss
@@ -23,7 +23,7 @@ code-snippet {
     color: var(--c-indigo-90);
     font-weight: 500;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 100%;
     letter-spacing: -0.02em;
 
     cursor: pointer;
@@ -74,15 +74,14 @@ code-snippet {
 }
 
 .background {
-  overflow: hidden;
   border-radius: 16px;
+  overflow: hidden;
   background: #00233a;
 }
 
 .code-wrapper {
   display: flex;
   background: #00233a;
-  border-radius: 16px;
 
   position: relative;
   left: var(--code-left);
